--- a/01-Fundamentals-Part-1/mine/index.html
+++ b/01-Fundamentals-Part-1/mine/index.html
@@ -25,6 +25,6 @@
   </head>
   <body>
     <h1>JavaScript Fundamentals – Part 1</h1>
-    <script src="assignments.js"></script>
+    <script src="challenge_3.js"></script>
   </body>
 </html>
